--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ version '1.0'
 dependencies {
     testImplementation (
             'com.codeborne:selenide:6.16.0',
+            'com.github.javafaker:javafaker:1.0.2',
             'org.junit.jupiter:junit-jupiter:5.9.3'
     )
 }
