--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java-library'
+    id 'io.qameta.allure' version '2.11.2'
 }
 
 repositories {
@@ -9,14 +10,36 @@ repositories {
 group 'com.demoqa'
 version '1.0'
 
+allure {
+    report {
+        version.set("2.23.0")
+    }
+    adapter { // отвечает за появление папочки build/allure-results
+        aspectjWeaver.set(true) //обработка аннотации @Step
+        frameworks {
+            junit5 { //название фреймворка
+                adapterVersion.set("2.23.0") //версия интеграции фреймворка и Allure
+            }
+        }
+    }
+}
+
 dependencies {
     testImplementation (
             'com.codeborne:selenide:6.16.0',
             'com.github.javafaker:javafaker:1.0.2',
-            'org.junit.jupiter:junit-jupiter:5.9.3'
-    )
+            'org.junit.jupiter:junit-jupiter:5.9.3',
+            'io.qameta.allure:allure-selenide:2.23.0')
+    testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.9.3')
 }
+
 
 test {
     useJUnitPlatform()
+}
+
+task simple_test(type:Test ) {
+    useJUnitPlatform{
+        includeTags("simple")
+    }
 }
