--- a/build.gradle
+++ b/build.gradle
@@ -14,26 +14,33 @@ allure {
     report {
         version.set("2.23.0")
     }
-    adapter { // отвечает за появление папочки build/allure-results
-        aspectjWeaver.set(true) //обработка аннотации @Step
+    adapter {
+        aspectjWeaver.set(true)
         frameworks {
-            junit5 { //название фреймворка
-                adapterVersion.set("2.23.0") //версия интеграции фреймворка и Allure
+            junit5 {
+                adapterVersion.set("2.23.0")
             }
         }
     }
 }
 
 dependencies {
-    testImplementation (
+    testImplementation(
             'com.codeborne:selenide:6.16.0',
             'com.github.javafaker:javafaker:1.0.2',
             'org.junit.jupiter:junit-jupiter:5.9.3',
-            'io.qameta.allure:allure-selenide:2.23.0')
+            'io.qameta.allure:allure-selenide:2.23.0',
+            'com.codeborne:selenide:6.17.1'
+    )
     testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.9.3')
 }
 
 
 test {
     useJUnitPlatform()
+}
+task remote_test(type: Test) {
+    useJUnitPlatform {
+        includeTags("remote")
+    }
 }
